Give inputs a fixed width.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h3>Users</h3>
         <ul></ul>
         <form id="add">
-          <input type="text" size="26" id="add-name" />
+          <input type="text" id="add-name" />
           <input type="submit" value="Add your name" />
         </form>
       </div>
@@ -30,7 +30,7 @@
       </div>
       <p id="name"></p>
       <form id="talk">
-        <input type="text" size="111" id="chat-text" />
+        <input type="text" id="chat-text" />
         <input type="submit" value="Send" />
       </form>
     </div>
