Some style tweaks & some props.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <div id="content">
+      <h3>IndyJS node.js+CouchDB demo chat app</h3>
+      <h4>Special thanks to <a href="http://nodester.com">nodester</a> for the quick coupon code and the free hosting! CouchDB hosted by <a href="http://cloudant.com">Cloudant</a></h4>
       <div id="messages"><p>Connecting...</p></div>
       <div id="users">
         <h3>Users</h3>
